# hermes-video

./: .env.example  .gitignore  README.md  SECURITY.md  SKILL.md  install.sh  manifest.json  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
assets/: CHANGELOG.md
docs/: PLAN-MIMO.md  PLAN-README.md  PLAN-REBRAND.md
references/: HERMES-INTEGRATION.md  PLAN-MIMO.md  PLAN-REFACTOR.md  PLAN-SIMPLIFY.md  REFACTOR-LESSONS.md  TELEGRAM-MENU.md  analysis-stats-output.md  free-transcription-alternatives.md  groq-whisper-limits.md  json3-format.md  json3-transcript-frame-alignment.md  language-detection-pitfall.md  llm-transcript-frame-alignment.md  plan-b2gom-integration.md  plan-pydantic-structured-output.md  python-subprocess-security-patterns.md  scene-detection-bottleneck.md  scene-detection-optimization.md  speaker-diarization-research.md  transcript-proofreading-tools.md  truncation-fabrication-incident.md  youtube-2026-download-requirements.md  youtube-403-deno-curl-cffi.md  youtube-403-download.md  youtube-429-rate-limit.md  youtube-download-throttling.md  youtube-metadata-extraction.md  yt-dlp-structured-output.md
scripts/: download.py  stats_collector.py  synthesis.py  vision_verify.py  watch.py
skill-bundles/: video-research.yaml
skills/watch/: SKILL.md
src/watch/: __init__.py  cli.py  (+10 more)
templates/: .env.example
tests/: conftest.py  test_config.py  test_dedup.py  test_download.py  test_env.py  test_frames.py  test_models.py  test_opencode_client.py  test_setup.py  test_timestamps.py  test_types.py  test_watch.py  test_whisper.py
(+26 files in other folders)
