[project]
name = "hermes-video"
version = "2.0.0"
requires-python = ">=3.11"
description = "Video analysis tool for Hermes Agent"
license = "MIT"

[project.scripts]
watch = "watch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
